--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: serapeum_app
-description: "A new Flutter project."
+description: "Serapeum: A Hybrid AI Client built with Flutter (Local-First + Cloud Discovery)."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -20,6 +20,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ^3.11.0
+  flutter: ">=3.38.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,16 +36,18 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.6.1
-  riverpod_annotation: ^2.3.5
+  riverpod_annotation: ^2.6.0
   go_router: ^17.1.0
-  isar: ^3.1.0+1
-  isar_flutter_libs: ^3.1.0+1
+  realm: ^3.0.0
+
   path_provider: ^2.1.5
   supabase_flutter: ^2.12.0
   dio: ^5.9.1
   google_fonts: ^8.0.1
   flutter_animate: ^4.5.2
+  json_annotation: ^4.8.1
   envied: ^1.3.3
+
 
 dev_dependencies:
   flutter_test:
@@ -57,10 +60,14 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
   build_runner: ^2.4.13
-  riverpod_generator: ^2.4.0
-  isar_generator: ^3.1.0+1
+  riverpod_generator: ^2.6.3
+  custom_lint: ^0.7.0
+  riverpod_lint: ^2.6.3
+
+  realm_generator: ^3.5.0
+
   json_serializable: ^6.7.1
-  json_annotation: ^4.8.1
+
   envied_generator: ^1.1.1
 
 
