--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,17 +10,8 @@ jobs:
   analyze:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.41.1'
-          channel: 'stable'
-      - name: Install dependencies
-        run: flutter pub get
-      - name: Create dummy .env
-        run: cp .env.example .env
-      - name: Generate code
-        run: dart run build_runner build --delete-conflicting-outputs
+      - name: Setup Project
+        uses: ./.github/actions/setup-flutter
       - name: Verify formatting
         run: dart format --output=none --set-exit-if-changed .
       - name: Analyze project
@@ -30,34 +21,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: analyze
     steps:
-      - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.41.1'
-          channel: 'stable'
-      - name: Install dependencies
-        run: flutter pub get
-      - name: Create dummy .env
-        run: cp .env.example .env
-      - name: Generate code
-        run: dart run build_runner build --delete-conflicting-outputs
+      - name: Setup Project
+        uses: ./.github/actions/setup-flutter
       - name: Run tests
         run: flutter test
 
   build-check:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: macos-latest
     needs: test
     steps:
-      - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.41.1'
-          channel: 'stable'
-      - name: Install dependencies
-        run: flutter pub get
-      - name: Create dummy .env
-        run: cp .env.example .env
-      - name: Generate code
-        run: dart run build_runner build --delete-conflicting-outputs
+      - name: Setup Project
+        uses: ./.github/actions/setup-flutter
       - name: Build macOS (check)
         run: flutter build macos --debug --no-pub
