--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
   analyze:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Setup Project
         uses: ./.github/actions/setup-flutter
       - name: Verify formatting
@@ -21,6 +23,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: analyze
     steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Setup Project
         uses: ./.github/actions/setup-flutter
       - name: Run tests
@@ -31,6 +35,8 @@ jobs:
     runs-on: macos-latest
     needs: test
     steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Setup Project
         uses: ./.github/actions/setup-flutter
       - name: Build macOS (check)
