fix: restore realm_generator disabled entry to prevent output conflict [SER-32]

--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,7 @@
 targets:
   $default:
     builders:
+      realm_generator:
+        enabled: false
       realm|realm_generator:
         enabled: true
