refactor(discovery): address CodeRabbit review feedback
This commit addresses the remaining feedback items:
- Disable deprecated realm_generator in build.yaml
- Extract repetitive logic to a private _post helper in DiscoveryRepository
- Implement Domain Entities (Book, Game, Media) for strict layer separation
- Implement value equality for NetworkFailure and TimeoutFailure
- Align OpenAPI schema and DTO serialization (media, queries, formats)
- Update CI workflow to run build checks on PRs targeting main
- Allow tracking of .env.example in .gitignore
- Remove unnecessary onResponse override in AuthInterceptor

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ migrate_packages.log
 # that should not be committed to the repository.
 .vscode/
 
+# Claude local configuration
+.claude/
+
 # Flutter/Dart related
 **/doc/api/
 **/ios/Flutter/.last_build_id
@@ -67,12 +70,10 @@ local.properties
 .env
 .env.local
 .env.*
+!.env.example
 
 # Project specific
 coverage/
 
 # Build tools (binaries, not source)
 tools/**/*.jar
-
-# Claude local configuration
-.claude/
