--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_animate: ^4.5.2
   json_annotation: ^4.9.0
   envied: ^1.3.3
+  sensors_plus: ^7.0.0
 
 
 dev_dependencies:
@@ -70,6 +71,7 @@ dev_dependencies:
 
   envied_generator: ^1.1.1
   husky: ^0.1.7
+  flutter_launcher_icons: ^0.13.1
 
 
 
@@ -86,9 +88,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -115,3 +116,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
+  min_sdk_android: 21
